--- a/style.css
+++ b/style.css
@@ -27,3 +27,58 @@ hr {
 .instructors{
     max-width: 1500px;
 }
+
+#Fred{
+    background-image: url(static/Fred.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 60vh;
+}
+
+#Fred:hover #FredShow{
+    display: none;
+    transition: 1s;
+}
+
+.HiddenBlock{
+    display: none;
+    background-color: rgba(0,0,0,0.45);
+    height: 100%;
+    margin:0%;
+    color: white;
+    padding: 20% 5% 20% 5%;
+    text-align: justify;
+    align-items: center;
+}
+
+#Fred:hover #FredHide{
+    display: flex;
+    transition: 1s;
+}
+
+#instructorrow{
+    column-gap: 1%;
+}
+
+.tablecontainer{
+    max-width: 1500px;
+    margin-top: 100px;
+}
+
+.galleryimages{
+    max-width: 1500px;
+}
+
+.footer{
+    max-width: 1500px;
+}
+
+.list{
+    margin-top: 100px;
+}
+
+.schedule{
+    max-width: 1500px;
+    margin-top: 100px;
+}
